netbench/netbench/src/scenario/builder/snapshots/netbench__scenario__builder__tests__conn_checkpoints.snap
---
source: netbench/netbench/src/scenario/builder/tests.rs
assertion_line: 46
expression: "scenario(|scenario|\n             {\n                 let server = scenario.create_server();\n                 scenario.create_client(|client|\n                                            {\n                                                client.connect_to(server,\n                                                                  |conn|\n                                                                      {\n                                                                          let (cp1_rx,\n                                                                               cp1_tx) =\n                                                                              conn.checkpoint();\n                                                                          conn.concurrently(|conn|\n                                                                                                {\n                                                                                                    conn.open_send_stream(|local|\n                                                                                                                              {\n                                                                                                                                  local.set_send_rate(10.kilobytes()\n                                                                                                                                                          /\n                                                                                                                                                          50.millis());\n                                                                                                                                  local.send(1.megabytes()\n                                                                                                                                                 /\n                                                                                                                                                 2);\n                                                                                                                                  local.unpark(cp1_tx);\n                                                                                                                                  local.send(1.megabytes()\n                                                                                                                                                 /\n                                                                                                                                                 2);\n                                                                                                                              },\n                                                                                                                          |peer|\n                                                                                                                              {\n                                                                                                                                  peer.set_receive_rate(10.kilobytes()\n                                                                                                                                                            /\n                                                                                                                                                            50.millis());\n                                                                                                                                  peer.receive(1.megabytes());\n                                                                                                                              });\n                                                                                                },\n                                                                                            |conn|\n                                                                                                {\n                                                                                                    conn.open_send_stream(|local|\n                                                                                                                              {\n                                                                                                                                  local.park(cp1_rx);\n                                                                                                                                  local.set_send_rate(1024.bytes()\n                                                                                                                                                          /\n                                                                                                                                                          50.millis());\n                                                                                                                                  local.send(1.megabytes());\n                                                                                                                              },\n                                                                                                                          |peer|\n                                                                                                                              {\n                                                                                                                                  peer.set_receive_rate(1024.bytes()\n                                                                                                                                                            /\n                                                                                                                                                            50.millis());\n                                                                                                                                  peer.receive(1.megabytes());\n                                                                                                                              });\n                                                                                                });\n                                                                      });\n                                            });\n             })"

---
{
  "id": "",
  "clients": [
    {
      "scenario": [
        {
          "connect": {
            "server_id": 0,
            "server_connection_id": 0,
            "client_connection_id": 0
          }
        }
      ],
      "connections": [
        {
          "ops": [
            {
              "scope": {
                "threads": [
                  [
                    {
                      "open_send_stream": {
                        "stream_id": 0
                      }
                    },
                    {
                      "send_rate": {
                        "stream_id": 0,
                        "bytes": 10000,
                        "period_ms": 50
                      }
                    },
                    {
                      "send": {
                        "stream_id": 0,
                        "bytes": 500000
                      }
                    },
                    {
                      "unpark": {
                        "checkpoint": 0
                      }
                    },
                    {
                      "send": {
                        "stream_id": 0,
                        "bytes": 500000
                      }
                    }
                  ],
                  [
                    {
                      "open_send_stream": {
                        "stream_id": 1
                      }
                    },
                    {
                      "park": {
                        "checkpoint": 0
                      }
                    },
                    {
                      "send_rate": {
                        "stream_id": 1,
                        "bytes": 1024,
                        "period_ms": 50
                      }
                    },
                    {
                      "send": {
                        "stream_id": 1,
                        "bytes": 1000000
                      }
                    }
                  ]
                ]
              }
            }
          ]
        }
      ]
    }
  ],
  "servers": [
    {
      "connections": [
        {
          "peer_streams": [
            [
              {
                "receive_rate": {
                  "stream_id": 0,
                  "bytes": 10000,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 0,
                  "bytes": 1000000
                }
              }
            ],
            [
              {
                "receive_rate": {
                  "stream_id": 1,
                  "bytes": 1024,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 1,
                  "bytes": 1000000
                }
              }
            ]
          ]
        }
      ]
    }
  ]
}
