netbench/netbench/src/scenario/builder/snapshots/netbench__scenario__builder__tests__long_chain_cert.snap
---
source: netbench/netbench/src/scenario/builder/tests.rs
assertion_line: 163
expression: "scenario(|scenario|\n             {\n                 let ca = scenario.create_ca_with(|ca| { ca.ecdsa(); });\n                 let server =\n                     scenario.create_server_with(|server|\n                                                     {\n                                                         let key =\n                                                             ca.key_pair_with(|key|\n                                                                                  {\n                                                                                      key.push_ia();\n                                                                                      key.push_ia_with(|ia|\n                                                                                                           {\n                                                                                                               ia.ed25519();\n                                                                                                           });\n                                                                                  });\n                                                         server.set_cert(key);\n                                                     });\n                 scenario.create_client(|client|\n                                            {\n                                                client.connect_to(server,\n                                                                  |conn|\n                                                                      {\n                                                                          conn.open_send_stream(|local|\n                                                                                                    {\n                                                                                                        local.set_send_rate(1024.bytes()\n                                                                                                                                /\n                                                                                                                                50.millis());\n                                                                                                        local.send(1.megabytes());\n                                                                                                    },\n                                                                                                |peer|\n                                                                                                    {\n                                                                                                        peer.set_receive_rate(1024.bytes()\n                                                                                                                                  /\n                                                                                                                                  50.millis());\n                                                                                                        peer.receive(1.megabytes());\n                                                                                                    });\n                                                                      });\n                                            });\n             })"

---
{
  "id": "",
  "clients": [
    {
      "scenario": [
        {
          "connect": {
            "server_id": 0,
            "server_connection_id": 0,
            "client_connection_id": 0
          }
        }
      ],
      "connections": [
        {
          "ops": [
            {
              "open_send_stream": {
                "stream_id": 0
              }
            },
            {
              "send_rate": {
                "stream_id": 0,
                "bytes": 1024,
                "period_ms": 50
              }
            },
            {
              "send": {
                "stream_id": 0,
                "bytes": 1000000
              }
            },
            {
              "send_finish": {
                "stream_id": 0
              }
            }
          ]
        }
      ],
      "certificate_authorities": [
        0
      ]
    }
  ],
  "servers": [
    {
      "connections": [
        {
          "peer_streams": [
            [
              {
                "receive_rate": {
                  "stream_id": 0,
                  "bytes": 1024,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 0,
                  "bytes": 1000000
                }
              },
              {
                "receive_finish": {
                  "stream_id": 0
                }
              }
            ]
          ]
        }
      ],
      "private_key": 1,
      "certificate": 2,
      "certificate_authority": 0
    }
  ]
}
