netbench/netbench/src/scenario/builder/snapshots/netbench__scenario__builder__tests__simple.snap
---
source: netbench/netbench/src/scenario/builder/tests.rs
assertion_line: 27
expression: "scenario(|scenario|\n             {\n                 let server = scenario.create_server();\n                 scenario.create_client(|client|\n                                            {\n                                                client.connect_to(server,\n                                                                  |conn|\n                                                                      {\n                                                                          conn.open_send_stream(|local|\n                                                                                                    {\n                                                                                                        local.set_send_rate(1024.bytes()\n                                                                                                                                /\n                                                                                                                                50.millis());\n                                                                                                        local.send(1.megabytes());\n                                                                                                    },\n                                                                                                |peer|\n                                                                                                    {\n                                                                                                        peer.set_receive_rate(1024.bytes()\n                                                                                                                                  /\n                                                                                                                                  50.millis());\n                                                                                                        peer.receive(1.megabytes());\n                                                                                                    });\n                                                                      });\n                                            });\n             })"

---
{
  "id": "",
  "clients": [
    {
      "scenario": [
        {
          "connect": {
            "server_id": 0,
            "server_connection_id": 0,
            "client_connection_id": 0
          }
        }
      ],
      "connections": [
        {
          "ops": [
            {
              "open_send_stream": {
                "stream_id": 0
              }
            },
            {
              "send_rate": {
                "stream_id": 0,
                "bytes": 1024,
                "period_ms": 50
              }
            },
            {
              "send": {
                "stream_id": 0,
                "bytes": 1000000
              }
            }
          ]
        }
      ]
    }
  ],
  "servers": [
    {
      "connections": [
        {
          "peer_streams": [
            [
              {
                "receive_rate": {
                  "stream_id": 0,
                  "bytes": 1024,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 0,
                  "bytes": 1000000
                }
              }
            ]
          ]
        }
      ]
    }
  ]
}
